# HaskellProgram

./: .gitignore  README.md  controlStructures.hs  filter.hs  naminConvention.hs  traversal.hs
basics/: AddBrackets.hs  composition.hs  reduction.hs  traversal.hs
classSection2/: CompasDatatype.hs  ExpressionsExample.hs  test.hs
firstprogram/: FunctPatternMatch.hs  Makefile  Quaternion.hs  RGBProductSumTypes.hs  RGBcolorProductTypes.hs  TypeClasses.hs  TypeWrapping.hs  charTypes.hs  colorSumType.hs  firstProgram  firstProgram.hs  formatList.hs  functions.hs  hie.yaml  listType.hs  minMaxMean.hs  number.txt  polymorphism.hs  rgbRecordProductTypes.hs  stack.yaml  tupleTypes.hs  typesAliases.hs
firstprogram/catn/: LICENSE  README.md  Setup.hs  catn.cabal  stack.yaml
firstprogram/catn/src/: Main.hs
whitespaceLayoutScope/: braces.hs  caseofExpression.hs  scopedef01.hs  whereClauses.hs  whitespaceLayoutScope.hs
wordsGame/wordsGame/: ChangeLog.md  LICENSE  README.md  package.yaml  wordsGame.cabal
wordsGame/wordsGame/app/: Main.hs
wordsGame/wordsGame/src/: Data.hs  Lib.hs  TestCode.hs  Trials.hs
wordsGame/wordsGame/test/: Spec.hs
