name:                           catn
version:                        0.1.0.0
license:                        OtherLicense
license-file:                   LICENSE
author:                         Richard Cook
maintainer:                     rcook@rcook.org
copyright:                      2017 Richard Cook
category:                       Utils
build-type:                     Simple
cabal-version:                  >=1.10
extra-source-files:             README.md

executable catn
  hs-source-dirs:               src
  main-is:                      Main.hs
  default-language:             Haskell2010
  build-depends:                base
